Node data lookup and Air Time details

--- a/templates/details.html
+++ b/templates/details.html
@@ -13,6 +13,14 @@
         <td>{{ data['lastReceived.rxSnr'] }}</td>
     </tr>
     <tr>
+        <td>Channel Utilization</td>
+        <td>{{ data['deviceMetrics.channelUtilization'] }}</td>
+    </tr>
+    <tr>
+        <td>Air Time</td>
+        <td>{{ data['deviceMetrics.airUtilTx'] }}</td>
+    </tr>
+    <tr>
         <td>Node Role</td>
         <td>{{ data['user.role'] }}</td>
     </tr>
